frontend_tests/negative/continue_placement/go.mod
module example.com/renvotests/negative/continue_placement

go 1.25
